--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,1 +1,26 @@
+name: 🚀 Deploy website on push
+on:
+  push:
+    branches: [master]
+jobs:
+  web-deploy:
+    name: 🎉 Deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: 🚚 Get latest code
+        uses: actions/checkout@v2.3.2
+
+      - name: Install Composer dependencies
+        run: composer install
+
+      - name: Copy .env.example to .env
+        run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
+      - name: 📂 Sync files
+        uses: SamKirkland/FTP-Deploy-Action@4.0.0
+        with:
+          server: 176.96.243.100
+          username: napa500
+          password: ${{ secrets.FTP_PASSWORD }}
+          server-dir: /glinkin.napaautomotive.uz/
 
